terms, privacy and support pages

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <nav class="links">
         <a href="#features">Features</a>
         <a href="#how">How it works</a>
-        <a href="#privacy">Privacy</a>
+        <a href="/privacy/">Privacy</a>
         <a href="#faq">FAQ</a>
         <a class="btn ghost" href="#github" id="gh">View on GitHub</a>
         <a class="btn primary" href="#install" id="install">Add to Chrome</a>
@@ -294,8 +294,9 @@
         <a href="#install">Install</a>
         <a href="#github">GitHub</a>
         <a href="#docs">Docs</a>
-        <a href="#support">Support</a>
-        <a href="#privacy">Privacy</a>
+        <a href="/support/">Support</a>
+        <a href="/privacy/">Privacy</a>
+        <a href="/terms/">Terms</a>
       </div>
     </div>
   </footer>
