update to landing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="YearMap — Plan your year at a glance" />
   <meta property="og:description" content="Interactive Neatnik‑style calendar with color‑coded ranges, notes, and universal ICS export." />
-  <meta property="og:image" content="https://yearmap.app/og-image.png" />
+  <meta property="og:image" content="assets/yearmap_full.png" />
   <meta property="og:url" content="https://yearmap.app/" />
   <meta name="twitter:card" content="summary_large_image" />
 
