--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="YearMap — Plan your year at a glance" />
   <meta property="og:description" content="Interactive Neatnik‑style calendar with color‑coded ranges, notes, and universal ICS export." />
-  <meta property="og:image" content="assets/yearmap_full.png" />
+  <meta property="og:image" content="https://yearmap.app/assets/yearmap_full.png" />
   <meta property="og:url" content="https://yearmap.app/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -308,7 +308,7 @@
         </div>
         <div>
           <div class="calendar-preview">
-            <!-- Calendar preview placeholder -->
+            <img src="https://yearmap.app/assets/yearmap_full.png" alt="YearMap Calendar Screenshot" style="width:100%; height:100%; object-fit:cover;" />
           </div>
         </div>
       </div>
