--- a/terms/index.html
+++ b/terms/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <title>Terms of Use — YearMap</title>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-290HM1TX70"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-290HM1TX70');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Terms of Use for YearMap, a Chrome extension by Spring Harbor Studios." />
   <style>
