--- a/index.html
+++ b/index.html
@@ -386,9 +386,18 @@
       <div class="container">
         <h2>How it works</h2>
         <div class="how">
-          <div class="step"><b>Create & select</b><p>Click‑and‑drag across days to make a range. Weekends can be shaded.</p></div>
-          <div class="step"><b>Categorize & note</b><p>Assign a color‑coded category and add an optional note.</p></div>
-          <div class="step"><b>Export</b><p>One click generates an ICS you can import into any calendar app.</p></div>
+          <div class="step">
+            <b>Mark Your Dates</b>
+            <p>Click and drag to select one or more days on the calendar. Highlight weekends, vacation blocks, projects, or any custom range.</p>
+          </div>
+          <div class="step">
+            <b>Add Meaning</b>
+            <p>Assign a color-coded category and include a short note to keep track of what each block represents.</p>
+          </div>
+          <div class="step">
+            <b>Export &amp; Sync</b>
+            <p>With one click, download an ICS file and import it into Google Calendar, Apple Calendar, or any other calendar app.</p>
+          </div>
         </div>
       </div>
     </section>
