update to landing

--- a/index.html
+++ b/index.html
@@ -405,17 +405,22 @@
     <section class="section">
       <div class="container grid-2">
         <div>
-          <h2>ICS Export</h2>
-          <p class="muted">Preserves category names, date ranges, and notes as event details. Proper all‑day boundaries for clean display.</p>
+          <h2>Export to your calendar</h2>
+          <p class="muted">Turn your selections into clean, all-day events in the calendar you already use.</p>
           <ul>
-            <li>Google / Outlook / Apple Calendar compatible</li>
-            <li>Handles empty calendars gracefully</li>
-            <li>Future‑proof foundation for CSV and multi‑year export</li>
+            <li>One-click ICS for Google, Outlook, and Apple Calendar</li>
+            <li>Keeps your categories, date ranges, and notes</li>
+            <li>Displays as tidy all-day blocks—no time clutter</li>
           </ul>
         </div>
         <div>
-          <h2>Pro Features</h2>
-          <p class="muted">Cloud sync, multiple calendars, and analytics are on the roadmap. Join the early access list.</p>
+          <h2>What’s next (early access)</h2>
+          <p class="muted">Features that make real planning faster.</p>
+          <ul>
+            <li>Multiple boards (work, family, travel)</li>
+            <li>Quick share (read-only link) for teammates or family</li>
+            <li>Calendar analytics (days by category, totals, streaks)</li>
+          </ul>
           <form class="waitlist" id="waitlist">
             <input type="email" name="email" placeholder="you@domain.com" aria-label="Email" required>
             <button class="btn" type="submit">Join waitlist</button>
